# nonebot-plugin-hermes

./: .env.example  .gitignore  README.md  README_EN.md  config.example.yaml  hermes_install_skill.py  onebot-bridge.service  onebot_bridge.py  pyproject.toml  test_bridge.py
.github/workflows/: pypi-publish.yml
nonebot_plugin_hermes/: __init__.py  config.py  utils.py
nonebot_plugin_hermes/core/: active_session.py  bot_registry.py  hermes_client.py  inflight.py  message_buffer.py  outbound.py  prompt_builder.py  session.py
nonebot_plugin_hermes/handlers/: __init__.py  commands.py  message.py
nonebot_plugin_hermes/mcp/: __init__.py  auth.py  server.py
nonebot_plugin_hermes/mcp/tools/: __init__.py  get_recent_messages.py  list_active_sessions.py  push_message.py
nonebot_plugin_hermes/scripts/: install_skill.py
nonebot_plugin_hermes/skill/: SKILL.md
nonebot_plugin_hermes/tasks/: __init__.py  expire_active_sessions.py
scripts/: spike_tools_passthrough.py
tests/: conftest.py  test_active_session.py  test_bot_registry.py  test_hermes_client_structured.py  test_inflight.py  test_mcp_auth.py  test_mcp_push_message.py  test_mcp_read_tools.py  test_message_buffer.py  test_message_handler_coalesce.py  test_prompt_builder.py  test_session_manager.py
